syntax = "proto3";
package web3mq;
message Web3MQBridgeConnectCommand {
  string NodeID = 1;
  string DAppID = 2;
  string TopicID = 3;
  uint64 SignatureTimestamp = 4;
  string DAppSignature = 5;
}