syntax = "proto3";
package web3mq;
// msgSign = ed25519 private key signing(nodeId + userId + timestamp)

message ConnectCommand {
  string nodeId = 1;
  string userId = 2;
  uint64 timestamp = 3;
  string msgSign = 4;
  string validatePubKey = 5;
}

